--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,58 +3,78 @@
 {% load i18n static %}
 
 {% block content %}
-    <div class="login-box">
-        {% block logo %}
-        <div class="login-logo">
-            {# Mirrors block names used in _main_header.html #}
-            <a href="{% block logo_href %}/{% endblock %}">{% block logo_text %}<b>Team</b>Tools{% endblock %}</a>
-        </div>
-        {% endblock %}
-        <!-- /.login-logo -->
-        <div class="login-box-body">
-            {% block login_errors %}
-                {% if form.errors and not form.non_field_errors %}
-                    <p class="alert alert-danger">
-                        {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}
-                            {% trans "Please correct the errors below." %}{% endif %}
-                    </p>
-                {% endif %}
+    <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Login</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="box">
+                            <div class="box-body">
+                                <div class="login-box">
+                                    {% block logo %}
+                                    <div class="login-logo">
+                                        {# Mirrors block names used in _main_header.html #}
+                                        <a href="{% block logo_href %}/{% endblock %}">{% block logo_text %}<b>Family</b>Tools{% endblock %}</a>
+                                    </div>
+                                    {% endblock %}
+                                    <!-- /.login-logo -->
+                                    <div class="login-box-body">
+                                        {% block login_errors %}
+                                            {% if form.errors and not form.non_field_errors %}
+                                                <p class="alert alert-danger">
+                                                    {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}
+                                                        {% trans "Please correct the errors below." %}{% endif %}
+                                                </p>
+                                            {% endif %}
 
-                {% if form.non_field_errors %}
-                    {% for error in form.non_field_errors %}
-                        <p class="alert alert-danger">
-                            {{ error }}
-                        </p>
-                    {% endfor %}
-                {% endif %}
-            {% endblock login_errors %}
+                                            {% if form.non_field_errors %}
+                                                {% for error in form.non_field_errors %}
+                                                    <p class="alert alert-danger">
+                                                        {{ error }}
+                                                    </p>
+                                                {% endfor %}
+                                            {% endif %}
+                                        {% endblock login_errors %}
 
-            {% block login_form %}
-                <form action="" method="post">
-                    {% csrf_token %}
-                    {% if message %}
-                        <p class="login-box-msg" style="color: red;">{{ message }}</p>
-                    {% endif %}
-                    <div class="form-group has-feedback">
-                        <input name="username" class="form-control" placeholder="{% trans 'Username' %}">
-                        <span class="glyphicon glyphicon-user form-control-feedback"></span>
-                    </div>
-                    <div class="form-group has-feedback">
-                        <input type="password" name="password" class="form-control" placeholder="{% trans 'Password' %}">
-                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-8">
-                            {% block login_form_links %}
-                            {% endblock %}
+                                        {% block login_form %}
+                                            <form action="" method="post">
+                                                {% csrf_token %}
+                                                {% if message %}
+                                                    <p class="login-box-msg" style="color: red;">{{ message }}</p>
+                                                {% endif %}
+                                                <div class="form-group has-feedback">
+                                                    <input name="username" class="form-control" placeholder="{% trans 'Username' %}">
+                                                    <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                                                </div>
+                                                <div class="form-group has-feedback">
+                                                    <input type="password" name="password" class="form-control" placeholder="{% trans 'Password' %}">
+                                                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                                                </div>
+
+                                                <div class="float-right">
+                                                    <button type="submit" class="btn btn-primary pull-right">{% trans 'Login' %}</button>
+                                                </div>
+                                            </form>
+                                        {% endblock login_form %}
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-xs-4">
-                            <button type="submit" class="btn btn-primary btn-block btn-flat">{% trans 'Login' %}</button>
-                        </div>
                     </div>
-                </form>
-            {% endblock login_form %}
-
+                    <div class="col-md-4"></div>
+                </div>
+            </div>
+            <!-- /.card-body -->
+          </div>
+          <!-- /.card -->
         </div>
+        <!-- /.col -->
     </div>
 {% endblock %}
