--- a/templates/main/_main_sidebar.html
+++ b/templates/main/_main_sidebar.html
@@ -1,7 +1,7 @@
 {% extends 'adminlte/lib/_main_sidebar.html' %}
 
 {% load adminlte_helpers %}
-{%load static %}
+{% load static %}
 
 {% block logo_text %}<span class="brand-text font-weight-light">{{ site.name }}</span>{% endblock %}
 
@@ -11,46 +11,49 @@
 {% block nav_links_ul %}
     <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            {% if not user.is_authenticated %}
+                <li class="nav-header">USER</li>
+                <li class="nav-item">
+                    <a href="{% url 'login' %}" class="nav-link">
+                        <i class="nav-icon far fa-user"></i>
+                        <p>Login</p>
+                    </a>
+                </li>
+            {% else %}
         {% block nav_links_outer %}
-        <li class="nav-header">{% block nav_heading %}MAIN{% endblock %}</li>
 
         {% block nav_links %}
-            <li class="nav-item has-tree-view menu-open">
-                <a href="#" class="nav-link {% if nav.first_level == 'housekeeping_book' %}active{% endif %}">
-                    <i class="nav-icon fas fa-object-group"></i> <p>Housekeeping book</p>
-                    <p><i class="right fas fa-angle-left"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview">
-                    <li class="nav-item">
-                        <a href="{% url 'account_holder_index' %}" class="nav-link {% if nav.second_level == 'account_holders' %}active{% endif %}">
-                            <i class="nav-icon fas fa-circle"></i> Account holders
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'category_index' %}" class="nav-link {% if nav.second_level == 'categories' %}active{% endif %}">
-                            <i class="nav-icon fas fa-circle"></i> Categories
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'booking_index' %}" class="nav-link {% if nav.second_level == 'bookings' %}active{% endif %}">
-                            <i class="nav-icon fas fa-circle"></i> Bookings
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'periodic_booking_index' %}" class="nav-link {% if nav.second_level == 'periodic_bookings' %}active{% endif %}">
-                            <i class="nav-icon fas fa-circle"></i> Periodic bookings
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'statistics_category_totals_per_month' %}" class="nav-link {% if nav.second_level == 'statistics_category_totals_per_month' %}active{% endif %}">
-                            <i class="nav-icon fas fa-circle"></i> Statistics
-                        </a>
-                    </li>
-                </ul>
-            </li>
+        <li class="nav-header">HOUSEKEEPING BOOK</li>
+        <li class="nav-item">
+            <a href="{% url 'booking_index' %}" class="nav-link {% if nav.second_level == 'bookings' %}active{% endif %}">
+                <i class="nav-icon fas fa-money-check-alt"></i> Bookings
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="{% url 'periodic_booking_index' %}" class="nav-link {% if nav.second_level == 'periodic_bookings' %}active{% endif %}">
+                <i class="nav-icon fas fa-sync"></i> Periodic bookings
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="{% url 'statistics_category_totals_per_month' %}" class="nav-link {% if nav.second_level == 'statistics_category_totals_per_month' %}active{% endif %}">
+                <i class="nav-icon fas fa-chart-line"></i> Statistics
+            </a>
+        </li>
+
+        <li class="nav-header">SETTINGS</li>
+        <li class="nav-item">
+            <a href="{% url 'account_holder_index' %}" class="nav-link {% if nav.second_level == 'account_holders' %}active{% endif %}">
+                <i class="nav-icon fas fa-handshake"></i> Account holders
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="{% url 'category_index' %}" class="nav-link {% if nav.second_level == 'categories' %}active{% endif %}">
+                <i class="nav-icon fas fa-database"></i> Categories
+            </a>
+        </li>
         {% endblock nav_links %}
         {% endblock nav_links_outer %}
+        {% endif %}
         </ul>
     </nav>
 {% endblock nav_links_ul %}
