--- a/templates/main/_main_sidebar.html
+++ b/templates/main/_main_sidebar.html
@@ -14,7 +14,7 @@
             {% if not user.is_authenticated %}
                 <li class="nav-header">USER</li>
                 <li class="nav-item">
-                    <a href="{% url 'login' %}" class="nav-link">
+                    <a href="{% url 'login' %}" class="nav-link {% if nav.second_level == 'login' %}active{% endif %}">
                         <i class="nav-icon far fa-user"></i>
                         <p>Login</p>
                     </a>
