add control-bar (unused)

--- a/templates/main/_main_sidebar.html
+++ b/templates/main/_main_sidebar.html
@@ -51,6 +51,11 @@
                 <i class="nav-icon fas fa-database"></i> Categories
             </a>
         </li>
+{#        <li class="nav-item">#}
+{#            <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">#}
+{#              <i class="nav-icon fas fa-th-large"></i> Control bar demo#}
+{#            </a>#}
+{#        </li>#}
         {% endblock nav_links %}
         {% endblock nav_links_outer %}
         {% endif %}
