--- a/templates/housekeeping_book/statistics/category_total_per_month.html
+++ b/templates/housekeeping_book/statistics/category_total_per_month.html
@@ -61,7 +61,7 @@
                                 </form>
                             </div>
                             <div class="box-body">
-                                <table id="datatables" class="table" style="width: 100%">
+                                <table id="datatables" class="table table-striped" style="width: 100%">
                                     <thead>
                                     <tr>
                                         <th data-data="category">Kategorie</th>
