--- a/templates/housekeeping_book/periodic_bookings/list.html
+++ b/templates/housekeeping_book/periodic_bookings/list.html
@@ -15,7 +15,7 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-              <table id="datatables" class="table table-bordered table-striped" data-server-side="true" data-ajax="/api/housekeeping_book/periodic_bookings/?format=datatables">
+              <table id="datatables" class="table table-striped" data-server-side="true" data-ajax="/api/housekeeping_book/periodic_bookings/?format=datatables">
                 <thead>
                     <tr>
                         <th data-data="id" class="min">ID</th>
@@ -50,6 +50,8 @@
             $('#datatables').DataTable({
                 "lengthMenu": [[10, 50, 100, -1], [10, 50, 100, "All"]],
                 "order": [[ 1, "asc" ], [ 2, "asc" ]],
+                "responsive": true,
+                "scrollX": true,
                 "columns": [
                     { "className": "min col-right", },
                     { "className": "min col-center", },
