add used-count as properties

--- a/templates/housekeeping_book/account_holders/list.html
+++ b/templates/housekeeping_book/account_holders/list.html
@@ -20,6 +20,7 @@
                     <tr>
                         <th data-data="id" class="min">ID</th>
                         <th data-data="name">Name</th>
+                        <th data-data="booking_count" class="min"># bookings</th>
                         <th class="min">&nbsp;</th>
                     </tr>
                 </thead>
@@ -45,6 +46,11 @@
                 "columns": [
                    { "className": "min col-right", },
                     null,
+                    {
+                        "className": "min col-right",
+                        "orderable": false,
+                        "searchable": false,
+                    },
                     {
                         "orderable": false,
                         "searchable": false,
