--- a/templates/housekeeping_book/account_holders/list.html
+++ b/templates/housekeeping_book/account_holders/list.html
@@ -20,7 +20,7 @@
                     <tr>
                         <th data-data="id" class="min">ID</th>
                         <th data-data="name">Name</th>
-                        <th data-data="booking_count" class="min"># bookings</th>
+                        <th data-data="num_bookings" class="min"># bookings</th>
                         <th class="min">&nbsp;</th>
                     </tr>
                 </thead>
@@ -48,8 +48,6 @@
                     null,
                     {
                         "className": "min col-right",
-                        "orderable": false,
-                        "searchable": false,
                     },
                     {
                         "orderable": false,
