make bookings count clickable

--- a/templates/housekeeping_book/account_holders/list.html
+++ b/templates/housekeeping_book/account_holders/list.html
@@ -48,6 +48,9 @@
                     null,
                     {
                         "className": "min col-right",
+                        "render": function (data, type, row) {
+                            return '<a href="/housekeeping_book/bookings/by_account_holder/' + row['id'] + '/">' + data + '</a>';
+                        }
                     },
                     {
                         "orderable": false,
