--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -15,7 +15,7 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-              <table id="datatables" class="table table-striped" data-server-side="true" data-ajax="/api/housekeeping_book/bookings/?format=datatables">
+              <table id="datatables" class="table table-striped" data-server-side="true" data-ajax="{{ datatables_path }}">
                 <thead>
                     <tr>
                         <th data-data="id" class="min">ID</th>
