--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -24,7 +24,7 @@
                             <th data-data="user.username">Username</th>
                         {% endif %}
                         <th data-data="category.name">Category</th>
-                        <th data-data="account_holder.name">Account holder</th>
+                        <th data-data="account_holder">Account holder</th>
                         <th data-data="description">Description</th>
                         <th data-data="amount">Amount</th>
                         <th class="min">&nbsp;</th>
@@ -56,7 +56,11 @@
                         { "className": "min" },
                     {% endif %}
                     null,
-                    null,
+                    {
+                        render: function (data, type, row) {
+                            return '<a href="/housekeeping_book/bookings/by_account_holder/' + data.id + '/">' + data.name + '</a>';
+                        }
+                    },
                     null,
                     {
                         "className": "min col-right",
