add data-name attribute to tell to the django-rest-framework-datatables builtin filter backend what field part to use to filter and reorder the queryset

--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -23,8 +23,8 @@
                         {% if request.user.is_staff %}
                             <th data-data="user.username">Username</th>
                         {% endif %}
-                        <th data-data="category">Category</th>
-                        <th data-data="account_holder">Account holder</th>
+                        <th data-data="category" data-name="category.name">Category</th>
+                        <th data-data="account_holder" data-name="account_holder.name">Account holder</th>
                         <th data-data="description">Description</th>
                         <th data-data="amount">Amount</th>
                         <th class="min">&nbsp;</th>
