--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -30,6 +30,13 @@
                         <th class="min">&nbsp;</th>
                     </tr>
                 </thead>
+                <tfoot>
+                    <tr>
+                        <th colspan="6" class="col-right">Total:</th>
+                        <th class="min col-right"></th>
+                        <th class="min"></th>
+                    </tr>
+                </tfoot>
               </table>
             </div>
             <!-- /.card-body -->
@@ -90,6 +97,23 @@
                         }
                     }
                 ],
+                "footerCallback": function ( row, data, start, end, display ) {
+                    var api = this.api();
+                    var floatVal = function(i) {
+                        return parseFloat(i);
+                    }
+
+                    var pageTotal = api
+                        .column(6, {page: 'current'})
+                        .data()
+                        .reduce(function (a, b) {
+                            return floatVal(a) + floatVal(b);
+                        }, 0);
+
+                    $( api.column( 6 ).footer() ).html(
+                        (Math.round(pageTotal * 100)/100).toFixed(2)
+                    );
+                }
             });
         });
     </script>
