--- a/templates/housekeeping_book/bookings/list.html
+++ b/templates/housekeeping_book/bookings/list.html
@@ -32,7 +32,11 @@
                 </thead>
                 <tfoot>
                     <tr>
-                        <th colspan="6" class="col-right">Total:</th>
+                        {% if request.user.is_staff %}
+                            <th colspan="6" class="col-right">Total:</th>
+                        {% else %}
+                            <th colspan="5" class="col-right">Total:</th>
+                        {% endif %}
                         <th class="min col-right"></th>
                         <th class="min"></th>
                     </tr>
@@ -103,14 +107,20 @@
                         return parseFloat(i);
                     }
 
+                    {% if request.user.is_staff %}
+                        var colNumber = 6;
+                    {% else %}
+                        var colNumber = 5;
+                    {% endif %}
+
                     var pageTotal = api
-                        .column(6, {page: 'current'})
+                        .column(colNumber, {page: 'current'})
                         .data()
                         .reduce(function (a, b) {
                             return floatVal(a) + floatVal(b);
                         }, 0);
 
-                    $( api.column( 6 ).footer() ).html(
+                    $( api.column(colNumber).footer() ).html(
                         (Math.round(pageTotal * 100)/100).toFixed(2)
                     );
                 }
