add buttons to toggle between all and active only periodic bookings

--- a/main/static/styles.css
+++ b/main/static/styles.css
@@ -18,3 +18,8 @@ td.col-right, th.col-right {
 th {
     white-space: nowrap;
 }
+
+#datatables_length {
+    float: left;
+    margin-right: 50px;
+}
