--- a/templates/main/base-datatables.html
+++ b/templates/main/base-datatables.html
@@ -7,6 +7,8 @@
     {{ block.super }}
 
     <link rel="stylesheet" type="text/css" href="{% static 'admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/buttons/1.6.4/css/buttons.dataTables.min.css">
+
 {% endblock %}
 
 {% block javascript %}
@@ -14,4 +16,6 @@
 
     <script src="{% static 'admin-lte/plugins/datatables/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+    <script src="{% static 'admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
+    <script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
 {% endblock %}
