--- a/templates/main/_main_sidebar.html
+++ b/templates/main/_main_sidebar.html
@@ -40,15 +40,32 @@
             </a>
         </li>
 
-        <li class="nav-header">SETTINGS</li>
+        <li class="nav-header font-weight-bold">SETTINGS</li>
+        <li class="nav-header">HOUSEKEEPING BOOK</li>
         <li class="nav-item">
             <a href="{% url 'account_holder_index' %}" class="nav-link {% if nav.second_level == 'account_holders' %}active{% endif %}">
                 <i class="nav-icon fas fa-handshake"></i> Account holders
             </a>
         </li>
         <li class="nav-item">
-            <a href="{% url 'category_index' %}" class="nav-link {% if nav.second_level == 'categories' %}active{% endif %}">
+            <a href="{% url 'category_index' %}" class="nav-link {% if nav.first_level == 'housekeeping_book' and nav.second_level == 'categories' %}active{% endif %}">
                 <i class="nav-icon fas fa-database"></i> Categories
+            </a>
+        </li>
+        <li class="nav-header">SUPPLIES</li>
+        <li class="nav-item">
+            <a href="{% url 'brand_index' %}" class="nav-link {% if nav.second_level == 'brands' %}active{% endif %}">
+                <i class="nav-icon fas fa-handshake"></i> Brands
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="{% url 'supplies_category_index' %}" class="nav-link {% if nav.first_level == 'supplies' and nav.second_level == 'categories' %}active{% endif %}">
+                <i class="nav-icon fas fa-database"></i> Categories
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="{% url 'supply_index' %}" class="nav-link {% if nav.first_level == 'supplies' and nav.second_level == 'supplies' %}active{% endif %}">
+                <i class="nav-icon fas fa-database"></i> Supplies
             </a>
         </li>
 {#        <li class="nav-item">#}
