--- a/templates/supplies/supply_items/new.html
+++ b/templates/supplies/supply_items/new.html
@@ -54,12 +54,13 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-md-9">
+                                        <div class="col-md-8"></div>
+                                        <div class="col-md-4">
                                             <div class="form-group">
-                                                <label>{{ form.amount.label_tag }}</label>
-                                                {{ form.amount.errors }}
-                                                {{ form.amount }}
-                                                <small id="amount_help" class="form-text text-muted">Amount</small>
+                                                <label>{{ form.count.label_tag }}</label>
+                                                {{ form.count.errors }}
+                                                {{ form.count }}
+                                                <small id="count_help" class="form-text text-muted">Count</small>
                                             </div>
                                         </div>
                                     </div>
