--- a/templates/supplies/supplies/list.html
+++ b/templates/supplies/supplies/list.html
@@ -101,29 +101,34 @@
                 let id = button.val();
                 button.prop('disabled', true);
 
+                toastr.options = {
+                  "closeButton": false,
+                  "debug": false,
+                  "newestOnTop": true,
+                  "progressBar": true,
+                  "positionClass": "toast-top-right",
+                  "preventDuplicates": false,
+                  "onclick": null,
+                  "showDuration": "200",
+                  "hideDuration": "200",
+                  "timeOut": "2000",
+                  "extendedTimeOut": "5000",
+                  "showEasing": "swing",
+                  "hideEasing": "linear",
+                  "showMethod": "fadeIn",
+                  "hideMethod": "fadeOut"
+                }
+
                 $.ajax({
                     url: "/supplies/supplies/" + id + "/todoist/",
                     type: "GET",
                     dataType: 'json',
                     success: function (data) {
-                        toastr.options = {
-                          "closeButton": false,
-                          "debug": false,
-                          "newestOnTop": true,
-                          "progressBar": true,
-                          "positionClass": "toast-top-right",
-                          "preventDuplicates": false,
-                          "onclick": null,
-                          "showDuration": "200",
-                          "hideDuration": "200",
-                          "timeOut": "2000",
-                          "extendedTimeOut": "5000",
-                          "showEasing": "swing",
-                          "hideEasing": "linear",
-                          "showMethod": "fadeIn",
-                          "hideMethod": "fadeOut"
+                        if(data.status === "success") {
+                            toastr["success"]("added to Todoist", data.message);
+                        }else if(data.status === "error") {
+                            toastr["error"](data.message, "error occurred");
                         }
-                        toastr["success"]("added to Todoist", data.message)
                         button.prop('disabled', false);
                     }
                 });
