--- a/templates/supplies/supply_items/list.html
+++ b/templates/supplies/supply_items/list.html
@@ -72,9 +72,9 @@
                         "render": function (data, type, row) {
                             let rowId = row['id'];
                             let links = '<div class="btn-group" role="group">';
-                            links+= '<a class="btn btn-xs btn-outline-primary" href="/supplies/supply_items/' + rowId + '/edit"><i class="fa fa-fw fa-edit"></i></a>'
-                            links+= '<a class="btn btn-xs btn-outline-warning" href="/supplies/supply_items/' + rowId + '/clone"><i class="far fa-fw fa-clone"></i></a>'
-                            links+= '<a class="btn btn-xs btn-outline-danger" href="/supplies/supply_items/' + rowId + '/delete"><i class="fa fa-fw fa-trash"></i></a>'
+                            links+= '<a class="btn btn-xs" href="/supplies/supply_items/' + rowId + '/clone"><i class="far fa-fw fa-clone text-warning"></i></a>'
+                            links+= '<a class="btn btn-xs" href="/supplies/supply_items/' + rowId + '/edit"><i class="fa fa-fw fa-edit text-primary"></i></a>'
+                            links+= '<a class="btn btn-xs" href="/supplies/supply_items/' + rowId + '/delete"><i class="fa fa-fw fa-trash text-danger"></i></a>'
                             links+= '</div>';
                             return links;
                         }
