--- a/templates/housekeeping_book/periodic_bookings/list.html
+++ b/templates/housekeeping_book/periodic_bookings/list.html
@@ -108,8 +108,8 @@
                         "render": function (data, type, row) {
                             let rowId = row['id'];
                             let links = '<div class="btn-group" role="group">';
-                            links+= '<a class="btn btn-xs btn-outline-primary" href="/housekeeping_book/periodic_bookings/' + rowId + '/edit"><i class="fa fa-fw fa-edit"></i></a>'
-                            links+= '<a class="btn btn-xs btn-outline-danger" href="/housekeeping_book/periodic_bookings/' + rowId + '/delete"><i class="fa fa-fw fa-trash"></i></a>'
+                            links+= '<a class="btn btn-xs" href="/housekeeping_book/periodic_bookings/' + rowId + '/edit"><i class="fa fa-fw fa-edit text-primary"></i></a>'
+                            links+= '<a class="btn btn-xs" href="/housekeeping_book/periodic_bookings/' + rowId + '/delete"><i class="fa fa-fw fa-trash text-danger"></i></a>'
                             links+= '</div>';
                             return links;
                         }
